Version 0.3.10+
	* Add warning to milk/__init__.py if import fails
	* Add return value to ``gridminimise``

Version 0.3.10 2011-05-10 by luispedro
	* Add ext.jugparallel
	* parallel nfold crossvalidation using jug
	* parallel multiple kmeans runs using jug
	* cluster_agreement for non-ndarrays
	* Add histogram & normali(z|s)e options to ``milk.kmeans.assign_centroid``
	* Fix bug in sda when features were constant for a class
	* Add select_best_kmeans
	* Added defaultlearner as a better name than defaultclassifier
	* Add `measures.curves.precision_recall`
	* Add `unsupervised.parzen.parzen`

Version 0.3.9 2011-03-15 by luispedro
	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
	* Fix gridminize for low count labels
	* Improve kmeans on newer numpy (works for larger datasets)
	* Add ``folds`` argument to ``nfoldcrossvalidation``
	* Add ``assign_centroid`` function in milk.unsupervised.nfoldcrossvalidation
	* Faster kmeans by coding centroid recalculation in C++
	* Fix bug with non-integer labels for tree learning

Version 0.3.8 2011-02-12 luispedro
	* Fix compilation on Windows

Version 0.3.7 2011-02-10 luispedro
	* Logistic regression
	* Source demos included (in source and documentation)
	* Add cluster agreement metrics
	* Fix nfoldcrossvalidation bug when using origins

Version 0.3.6 2010-12-17 luispedro
	* Unsupervised (1-class) kernel density modeling
	* Fix for when SDA returns empty
	* weights option to some learners
	* stump learner
	* Adaboost (result of above changes)

Version 0.3.5 2010-11-3
	* Fixes for 64 bit machines.
	* Functions in measures.py all have same interface now.

Version 0.3.4 2010-10-31
	* Random forest learners
	* Decision trees sped up 20x
	* Much faster gridsearch  (finds optimum without computing all folds)

Version 0.3.3 2010-10-22
	* Missing file added to distribution

Version 0.3.2
	* kmeans() for distance=mahalanobis
	* minimise dependency on scipy
	* self-organising maps